fix: keep dark mode toggle visible on small screens
Move the toggle button out of the .links div so it is not hidden
when the responsive breakpoint sets .links to display: none.

--- a/src/App.css
+++ b/src/App.css
@@ -108,17 +108,22 @@ code {
   overflow-y: scroll;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 768px) {
   .page {
     flex-direction: column;
   }
 
   .left-pane {
     width: 100%;
+    height: 50vh;
+    margin-right: 0;
   }
 
   .right-pane {
     width: 100%;
+    height: 50vh;
+    margin-left: 0;
+    margin-top: 0.6rem;
   }
 
   .links {
